discussion/kv_engine/149093/149093_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma WriteDocs histograms for cbstats kvtimings

Change-Id: I7eb4d8c5f2c88653c4e39c56b5a2f0ffa11239ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-04-13 23:08:21.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-13 23:33:01.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29975/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29975/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34928/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2518): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34928/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8321/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8321/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8321/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8909/ : FAILURE

Compile error at [2021-04-13T23:10:32.724Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8909/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9978/ : FAILURE

Compile error at [2021-04-13T23:26:34.995Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9978/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10208/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17757/ : FAILURE

Compile error at [2021-04-13T23:10:35.825Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17757/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6866/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9840/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-07-07 18:42:04.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
